dataset1235/2025-2/610742602/users/603578795/executions/677928262_48684178.log
== RUN (2025-08-26 21:15:12)
-- CODE: 
TV= float(input("insira o total:"))

L= TV * (30/100)

print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
insira o total:435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
insira o total:210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
insira o total:60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
insira o total:135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
insira o total:165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
insira o total:568.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:14:18)
-- CODE: 
TV= float(input("insira o total:"))

L= Tv * (30/100)

print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    L= Tv * (30/100)
       ^^
NameError: name 'Tv' is not defined. Did you mean: 'TV'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    L= Tv * (30/100)
       ^^
NameError: name 'Tv' is not defined. Did you mean: 'TV'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    L= Tv * (30/100)
       ^^
NameError: name 'Tv' is not defined. Did you mean: 'TV'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    L= Tv * (30/100)
       ^^
NameError: name 'Tv' is not defined. Did you mean: 'TV'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    L= Tv * (30/100)
       ^^
NameError: name 'Tv' is not defined. Did you mean: 'TV'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    L= Tv * (30/100)
       ^^
NameError: name 'Tv' is not defined. Did you mean: 'TV'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:14:44)
-- CODE: 
TV= float(input("insira o total:"))

L= TV + TV * (30/100)

print(round(L,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
insira o total:1888.74
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
insira o total:910.65
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
insira o total:260.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
insira o total:585.65
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
insira o total:716.33
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
insira o total:2462.19
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:15:20)
-- CODE: 
TV= float(input("insira o total:"))

L= TV * (30/100)

print(round(L,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
insira o total:435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
insira o total:210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
insira o total:60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
insira o total:135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
insira o total:165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
insira o total:568.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:14:31)
-- CODE: 
TV= float(input("insira o total:"))

L= TV * (30/100)

print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
insira o total:435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
insira o total:210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
insira o total:60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
insira o total:135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
insira o total:165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
insira o total:568.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:14:58)
-- CODE: 
TV= float(input("insira o total:"))

L= TV + TV * (30/100)

print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
insira o total:1888.74
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
insira o total:910.65
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
insira o total:260.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
insira o total:585.65
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
insira o total:716.33
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
insira o total:2462.19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:14:46)
-- CODE: 
TV= float(input("insira o total:"))

L= TV + TV * (30/100)

print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
insira o total:1888.74
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
insira o total:910.65
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
insira o total:260.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
insira o total:585.65
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
insira o total:716.33
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
insira o total:2462.19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
